tests/query_runtime_errors/binary_operators_and_right/error.txt
Error: 
    1 | select event.a and event.b from in into out;
      |                    ^^^^^^^ The binary operation `and` is not defined for the type `bool` and `string`
